set02/problem07_compile_errors.txt
c:\Users\eshwa\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Akshaya7483\set02\problem07.c:17:28: error: expected ';', ',' or ')' before '.' token
 void area(struct triangle x.base,struct triangle x.height)
                            ^
c:\Users\eshwa\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Akshaya7483\set02\problem07.c: In function 'main':
c:\Users\eshwa\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Akshaya7483\set02\problem07.c:23:16: error: unknown type name 'Traingle'
 void find_area(Traingle *t);
                ^~~~~~~~
c:\Users\eshwa\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Akshaya7483\set02\problem07.c:24:13: error: unknown type name 'Triangle'
 void output(Triangle t);
             ^~~~~~~~
c:\Users\eshwa\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Akshaya7483\set02\problem07.c:24:13: error: expected '{' at end of input
